--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,17 @@ img {
   flex-shrink: 0;
   width: 80vw;
   max-width: 800px;
-  margin: 0 20px;
+  margin: 0 10px;
+
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  opacity: 0.7;
+  transform: scale(0.8);
+  transition: 0.4s;
+}
+
+.slide li.active {
+  opacity: 1;
+  transform: scale(1);
 }
