--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,49 @@ img {
 [data-control="slide"] li a:hover {
   background: #e54;
 }
+
+.custom-controls {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px;
+}
+
+.custom-controls li {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 4px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+  opacity: 0.8;
+  transform: scale(0.8);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.custom-controls li.active {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.arrow-nav {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.arrow-nav button {
+  border: none;
+  background: #fb5 url("../img/arrow.svg") center center no-repeat;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  text-indent: -999px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.arrow-nav .prev {
+  transform: rotate(-180deg);
+}
